--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Commit button</h3>
+    <h3>use git commit to Commit your changes </h3>
 </body>
 </html>
